feat: implement pages feature
