# server/routes/api/v1/pages.php
@@ -1,0 +1,7 @@
+<?php
+
+use App\Http\Controllers\Api\PageController;
+use Illuminate\Support\Facades\Route;
+
+Route::middleware(['auth:sanctum', \Illuminate\Session\Middleware\StartSession::class])
+    ->apiResource('pages', PageController::class);
